--- a/SS2/index.html
+++ b/SS2/index.html
@@ -6,10 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Omni Page</title>
+  <!-- Nhúng file CSS -->
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <!-- Code giao diện trang web Omni Page -->
+
+  <!-- Home Menu -->
+  <div class="home-menu">
+
+    <nav>
+      <div class="logo">
+        <a href="#">
+          <img src="./image/logo-white.png" alt="">
+        </a>
+      </div>
+
+      <ul class="menu">
+        <li>FOOD DELIVERY</li>
+        <li>HOW IT WORKS</li>
+        <li>OUR CITIES</li>
+        <li>SIGN UP</li>
+      </ul>
+
+
+    </nav>
+
+  </div>
 
 </body>
 
