--- a/SS2/index.html
+++ b/SS2/index.html
@@ -16,19 +16,23 @@
   <div class="home-menu">
 
     <nav>
-      <div class="logo">
-        <a href="#">
-          <img src="./image/logo-white.png" alt="">
-        </a>
+
+      <div class="max-width">
+
+        <div class="logo">
+          <a href="#">
+            <img src="./image/logo-white.png" alt="">
+          </a>
+        </div>
+
+        <ul class="menu">
+          <li>FOOD DELIVERY</li>
+          <li>HOW IT WORKS</li>
+          <li>OUR CITIES</li>
+          <li>SIGN UP</li>
+        </ul>
+
       </div>
-
-      <ul class="menu">
-        <li>FOOD DELIVERY</li>
-        <li>HOW IT WORKS</li>
-        <li>OUR CITIES</li>
-        <li>SIGN UP</li>
-      </ul>
-
 
     </nav>
 
