--- a/SS2/index.html
+++ b/SS2/index.html
@@ -15,6 +15,8 @@
   <!--Phần 1: Home Menu -->
   <div class="home-menu">
 
+    <div class="opacity-menu"></div>
+
     <nav>
 
       <div class="max-width">
