--- a/SS2/index.html
+++ b/SS2/index.html
@@ -38,6 +38,23 @@
 
     </nav>
 
+    <!-- Content menu -->
+    <div class="content-menu">
+
+
+      <div class="text">
+        <p>GOOD BYE JUNK FOOD</p>
+        <p>HELLO SUPER HEALTHY MEALS</p>
+      </div>
+
+      <div class="multi-button">
+        <button id="button1">I'm Hungry</button>
+        <button id="button2">Show me more</button>
+      </div>
+
+
+    </div>
+
   </div>
 
 </body>
