done max-width part 2

--- a/SS2/index.html
+++ b/SS2/index.html
@@ -57,6 +57,26 @@
 
   </div>
 
+
+  <!-- Phần 2: Home Content -->
+  <div class="home-content">
+    <div class="max-width">
+      <p class="title">GET FOOD FAST - NOT FAST FOOD</p>
+
+      <div class="orange-bar"></div>
+
+      <div class="about">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam suscipit, vel quam provident officia
+          similique reiciendis sit, voluptatibus laboriosam quo voluptatum? Omnis fugit saepe, blanditiis corrupti sint
+          numquam consequatur aliquid.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam hic quam rerum sint vel, unde obcaecati
+          provident quidem aperiam officia voluptate blanditiis veritatis velit temporibus optio est! Velit, vitae
+          recusandae?</p>
+      </div>
+
+    </div>
+  </div>
+
 </body>
 
 </html>
