--- a/SS2/index.html
+++ b/SS2/index.html
@@ -75,6 +75,19 @@
       </div>
 
     </div>
+
+
+    <div class="content-boxes">
+
+      <div class="content-box">
+        <i></i>
+        <p class="title"></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio voluptas, accusantium, aperiam itaque
+          facere mollitia quam dicta sit totam dolore laborum ad aliquam nihil quasi commodi? Error, esse ipsam!</p>
+
+      </div>
+
+    </div>
   </div>
 
 </body>
