done nhung thẻ link CSS tới trang font awesome

--- a/SS2/index.html
+++ b/SS2/index.html
@@ -8,6 +8,11 @@
   <title>Omni Page</title>
   <!-- Nhúng file CSS -->
   <link rel="stylesheet" href="./style.css">
+
+  <!-- Nhúng link CSS font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -80,8 +85,8 @@
     <div class="content-boxes">
 
       <div class="content-box">
-        <i></i>
-        <p class="title"></p>
+        <i class="fa-solid fa-infinity"></i>
+        <p class="title">UP TO 365 DAYS/YEAR</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio voluptas, accusantium, aperiam itaque
           facere mollitia quam dicta sit totam dolore laborum ad aliquam nihil quasi commodi? Error, esse ipsam!</p>
 
