DONE HTML PART 2

--- a/SS2/index.html
+++ b/SS2/index.html
@@ -92,6 +92,30 @@
 
       </div>
 
+      <div class="content-box">
+        <i class="fa-solid fa-clock-rotate-left"></i>
+        <p class="title">READY IN 20 MINUTES</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio voluptas, accusantium, aperiam itaque
+          facere mollitia quam dicta sit totam dolore laborum ad aliquam nihil quasi commodi? Error, esse ipsam!</p>
+
+      </div>
+
+      <div class="content-box">
+        <i class="fa-solid fa-carrot"></i>
+        <p class="title">100% ORGANIC</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio voluptas, accusantium, aperiam itaque
+          facere mollitia quam dicta sit totam dolore laborum ad aliquam nihil quasi commodi? Error, esse ipsam!</p>
+
+      </div>
+      <div class="content-box">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <p class="title">ORDER ANYTHING</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi odio voluptas, accusantium, aperiam itaque
+          facere mollitia quam dicta sit totam dolore laborum ad aliquam nihil quasi commodi? Error, esse ipsam!</p>
+
+      </div>
+
+
     </div>
   </div>
 
