--- a/SS2/index.html
+++ b/SS2/index.html
@@ -72,11 +72,8 @@
 
       <div class="about">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam suscipit, vel quam provident officia
-          similique reiciendis sit, voluptatibus laboriosam quo voluptatum? Omnis fugit saepe, blanditiis corrupti sint
-          numquam consequatur aliquid.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam hic quam rerum sint vel, unde obcaecati
-          provident quidem aperiam officia voluptate blanditiis veritatis velit temporibus optio est! Velit, vitae
-          recusandae?</p>
+          similique reiciendis sit.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </div>
 
     </div>
@@ -117,6 +114,20 @@
 
 
     </div>
+  </div>
+
+
+  <!-- Phần 3: Home Banner -->
+  <div class="home-banner">
+
+    <div class="banner-image"><img src="./image/1.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/2.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/3.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/4.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/5.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/6.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/7.jpg" alt=""></div>
+    <div class="banner-image"><img src="./image/8.jpg" alt=""></div>
   </div>
 
 </body>
