--- a/SS2/index.html
+++ b/SS2/index.html
@@ -130,6 +130,46 @@
     <div class="banner-image"><img src="./image/8.jpg" alt=""></div>
   </div>
 
+  <!-- content guidance -->
+  <div class="content-guidance">
+
+    <div class="max-width">
+      <p class="title">HOW IT WORKS - SIMPLE AS 1,2,3</p>
+      <div class="orange-bar"></div>
+    </div>
+
+
+
+    <div class="guidance">
+
+      <img src="./image/app-iPhone.png" alt="">
+
+      <div class="steps">
+
+        <div class="step">
+          <i class="fa-solid fa-1"></i>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="step">
+          <i class="fa-solid fa-2"></i>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="step">
+          <i class="fa-solid fa-3"></i>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="download">
+          <img src="./image/download-app.svg" alt="">
+          <img src="./image/download-app-android.png" alt="">
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
 </body>
 
 </html>
